--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "liveServer.settings.port": 5503,
-    "livePreview.defaultPreviewPath": "/dashboard.html"
+  "liveServer.settings.port": 5503,
+  "livePreview.defaultPreviewPath": "/index.html"
 }
